# llm-comparative-eval

./: .gitignore  Cargo.toml  README.md  example.toml
src/: config.rs  evaluation.rs  main.rs  models.rs  output.rs  runner.rs
