[package]
name = "llm-comparative-eval"
version = "0.0.0"
edition = "2024"

[dependencies]
async-openai = "0.24"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
mockito = "1.0"
tempfile = "3.0"
